
== Version 1.0.9-beta 4/30/2009 ==

* Instrument some errors that people are running into - I haven't fixed them, but this should give me more information on how to fix them properly.
* Fix a bug causing the routing code to essentially stop routing new things when a large number of flightpoints are discovered

== Version 1.0.8-beta 4/29/2009 ==

* Change how the too-many-objectives-for-this-quest error shows up - hopefully I'll get reports without it breaking people's QH now
* Remove a lot of old 0.x saved variables
* Better support for mods that embed the quest level into the quest name
* Highlight quest-turn-in spots gold
* Many tweaks to handle WoW tooltips properly
* Update the route in realtime as you gain/lose objectives, instead of throwing all the work away and starting semi-fresh
* Store new flightmasters properly
* Fix a minor issue with tracker spacing on quests that have special items
* Add loading progress percentage
* Fix issue with arrow and minimap dodad not unhiding properly
* Add settings menu and button

== Version 0.106 4/27/2009 ==

* Provide scaling for the arrow and the arrow text
* Re-insert the map button in a less conflicty place, hopefully
* Add a feature to generate error reports on-demand - "/qh error full" to get a version and addon dump, which may be useful for debugging issues.
* Provide the rotating-arrow-pointing-down thingy, now people are going to leave comments complaining about the existence of it instead of the nonexistence of it, I CAN SEE THE FUTURE AND IT'S FULL OF EMO

== Version 1.0.7-alpha 4/22/2009 ==

* Not quite sure where to start here.
* Full rewrite of the routing core, pathing core, filters, quest director, data collector, data compilation, and database systems. Probably more. Consider this essentially an entire new UI mod, that merely happens to behave identically to QH 0.x.

== Version 0.105 4/22/2009 ==
